--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -216,3 +216,18 @@ input[type=checkbox], input[type=radio] {
 .menu_section.wf-section .desktop_menu .sub_models_menu {
     max-width: 100%;
 }
+
+
+.popup-overlay {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    background: rgba(0,0,0,0.6);
+    z-index: 9;
+
+}
+
+
+
