--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -238,6 +238,8 @@ input[type=checkbox], input[type=radio] {
 #message-popup {
     border: 2px solid black;
     font-size: 19px;
+    align-items: center;
+    justify-content: center;
 }
 
 
