--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -63,17 +63,18 @@ input[type=checkbox], input[type=radio] {
 
 
 #check-page-link .item-count {
-    background: #FFF;
     font-size: 10px;
     text-decoration: none;
     display: inline-block;
-    width: 15px;
-    height: 15px;
+    width: 17px;
+    height: 17px;
     border-radius: 10px;
-    box-shadow: 0px 0px 3px -1px #222;
+    /* box-shadow: 0px 0px 3px -1px #222; */
     position: absolute;
     bottom: -4px;
+    background: #61BB47;
     right: -10px;
+    color: #FFF;
 }
 
 #check-page-link {
