--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -275,7 +275,9 @@ input[type=checkbox], input[type=radio] {
     color: #21d91d;
     border-color: #148800;
 }
-
+.dropdown-list-6.w--open{
+    top: 70px !important;
+}
 
 
 
