--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -4,10 +4,12 @@
   }
   
   .hks-custom-wrap {
+    max-width: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 4px;
+    justify-content: space-between;
   }
   
   h2 {
