--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -34,10 +34,9 @@
   }
   
   .image_of_mobile {
-      margin-right: 10px;
-    width: 184px;
+    width:100%;
     height: 200px;
-    max-width: 100%; 
+    max-width:184px; 
   }
   
   .options-wrapper {
