--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -51,3 +51,17 @@
   .hks_select_view{
     width: 100%;
   }
+
+  .product-info-wrap{
+    display: flex;
+    justify-content: center;
+  }
+
+
+  .img-wrap{
+      width: 50%;
+  }
+
+  .options_wrapper{
+    width: 50%;
+}
