--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -75,3 +75,11 @@
   display: block;
   width: 100%;
 }
+
+hks-select-options{
+    border-radius: 20px;
+    font-size: 16px;
+    border: 2px solid #c9c9c9;
+    padding: 10px 25px;
+    font-weight: 600;
+}
