css edit by riz

--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -76,7 +76,7 @@
   width: 100%;
 }
 
-hks-select-options{
+.hks-select-options{
     border-radius: 20px;
     font-size: 16px;
     border: 2px solid #c9c9c9;
