--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -65,21 +65,28 @@
   }
 
   .options_wrapper{
+    padding: 0px 0px 0px 40px;
+    border-left: 1px solid grey;
     width: 65%;
     display: flex;
-    align-content: center;
     flex-wrap: wrap;
     justify-content: flex-start;
+    align-content: center;
 }
 .hks-options{
-  display: block;
+  column-gap: 11px;
+  display: flex;
   width: 100%;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: flex-start;
 }
 
 .hks-select-options{
-    border-radius: 20px;
-    font-size: 16px;
-    border: 2px solid #c9c9c9;
-    padding: 10px 25px;
-    font-weight: 600;
+  cursor: pointer;
+  border-radius: 20px;
+  font-size: 16px;
+  border: 2px solid #c9c9c9;
+  padding: 10px 25px;
+  font-weight: 600;
 }
