--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -90,13 +90,13 @@
   padding: 10px 25px;
   font-weight: 600;
 
-  background: linear-gradient(to left, rgb(255, 255, 255) 50%, rgb(193, 88, 235) 50%) right;
+  background: linear-gradient(to left, rgb(255, 255, 255) 50%, rgb(0, 0, 0) 50%) right;
   background-size: 200%;
   transition: .5s ease-out;
 }
 .hks-select-options:hover{
   background-position: left;
-  border-color: #000;
+  color: #fff;
 }
 .hks_item_title{
    text-align: center;
