--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -112,8 +112,14 @@
   .image_of_mobile {
     width: 100%;
     max-width: 300px;
+    height: 300px;
 }
+.hks-custom-wrap {
 
+  max-width: 50%;
+  padding: 8px;
+ 
+}
 
 
 }
