--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -133,3 +133,71 @@
 
 
 }
+
+
+
+@media (max-width: 769px) {
+  
+
+  .image_of_mobile {
+      width: 100%;
+      max-width: 300px;
+      height:auto;
+  }
+  .hks-custom-wrap {
+
+    max-width: 50%;
+    padding: 8px;
+  
+  }
+
+  .hks_item_title{
+    font-size: 22px;
+  }
+
+  .hks-select-options {
+  font-size: 16px;
+  padding: 7px 17px;
+  
+  }
+
+
+  .hks-custom-wrap {
+   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 19px;
+    justify-content: center;
+  }
+  .product-info-wrap {
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-content: space-around;
+    align-items: center;
+  }
+
+  .img-wrap {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
+  .options_wrapper {
+    padding: 0px 0px 0px 40px;
+    border-left: none;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: flex-start;
+  }
+
+
+
+
+
+
+
+}
