--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -33,7 +33,9 @@
   cursor: pointer;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
-  
+.current-opt{
+  text-transform: uppercase;
+}
   .image-wrapper {
     text-align: center;
     margin-bottom: 10px; 
