--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -26,6 +26,7 @@
   }
 
   .hks-clear{
+    background: #fafafa;
     font-weight: 500;
     font-size: 16px;
     border-radius: 19px;
@@ -120,7 +121,7 @@
 
   background: linear-gradient(to left, rgb(255, 255, 255) 50%, rgb(0, 0, 0) 50%) right;
   background-size: 200%;
-  transition: .4s ease-out;
+  transition: .3s ease-out;
 }
 .hks-select-options:hover{
   background-position: left;
