--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -26,7 +26,7 @@
   }
 
   .hks-clear{
-    background: #fafafa;
+    background: #fdfdfd;
     font-weight: 500;
     font-size: 16px;
     border-radius: 19px;
