--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -172,6 +172,7 @@
   .hks-select-options {
     font-size: 14px;
     padding: 7px 25px;
+    margin-top: 10px;
   
   }
   .img-wrap{
@@ -203,6 +204,7 @@
   .hks-select-options {
   font-size: 16px;
   padding: 7px 17px;
+  margin-top: 10px;
   
   }
 
