--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -185,6 +185,11 @@
 
 @media (max-width: 900px) {
   
+  .hks-select-options {
+    font-size: 14px;
+    padding: 7px 17px;
+    margin-top: 10px;
+  }
 
   .image_of_mobile {
       width: 100%;
@@ -266,6 +271,19 @@
 
 
 @media (max-width: 420px){
+  .product-info-wrap{
+    border-bottom: 1px solid #d7d7d7;
+  }
+  
+  .nav_btns {
+    padding: 35px 0px;
+    width: 100%;
+    display: flex;
+    column-gap: 20px;
+    justify-content: space-between;
+  }
+
+
 
   .nav_btns {
     padding: 35px 0px;
