--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -282,9 +282,9 @@
     flex-wrap: wrap;
   }
 
-  
+
   .product-info-wrap{
-    border-bottom: 1px solid #d7d7d7;
+    /* border-bottom: 1px solid #d7d7d7; */
   }
   
   .nav_btns {
