--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -8,6 +8,9 @@
     font-size: 17px;
   }
    
+  .hks-selected-options p:first-child {
+    display: none;
+  }
 
   .hks-custom-wrap {
     max-width: 33%;
