--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -8,7 +8,7 @@
     font-size: 17px;
   }
    
-  .hks-sel-opt p:first-child {
+  .hks-sel-opt .hks-applied-filter:first-child {
     display: none !important;
   }
 
