--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -112,12 +112,14 @@
   }
 
 
-  .img-wrap{
+  .img-wrap {
     display: flex;
     width: 45%;
-    justify-content: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
-  }
+    flex-direction: column;
+    align-items: center;
+}
 
   .options_wrapper{
     padding: 0px 0px 0px 40px;
