--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -356,7 +356,7 @@
   }
   .redirect-message {
     font-size: 18px;
-    color: #333;
+    color: #6d6d6d;
     font-family: 'Arial', sans-serif;
   }
 
