--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -382,8 +382,13 @@
 @media only screen and (min-width: 1200px) {
  
   .dropdown-list_tabs_content.w--open {
-    top: 106.5px !important;
-  }
+    width: auto;
+    max-width: 1440px;
+    background-color: transparent;
+    margin-top: 0;
+    display: block;
+    top: 150.5px !important;
+}
 
   
 }
