--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -379,16 +379,11 @@
 /* css for header navigations */
 
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (min-width: 1200px) {
  
   .dropdown-list_tabs_content.w--open {
-    width: auto;
-    max-width: 1440px;
-    background-color: transparent;
-    margin-top: 0;
-    display: block;
-    top:0px !important;
-}
+    top: 0px !important;
+  }
 
   
 }
