--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -277,4 +277,12 @@ input[type=checkbox], input[type=radio] {
 }
 
 
+/* css for header navigations */
+
+
+//@media only screen and (min-width: 1200px) {
+  #desktop-top-header-menu .dropdown-list_tabs_content.w--open {
+    top: 106px !important;
+  }
+//}
 
