--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -282,7 +282,7 @@ input[type=checkbox], input[type=radio] {
 
 /* @media only screen and (min-width: 1200px) { */
   #desktop-top-header-menu .dropdown-list_tabs_content.w--open {
-    top: 106px !important;
+    top: auto !important;
   }
 /* } */
 
