--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -92,7 +92,7 @@
 
 span.hks_device_heading {
     color: #000;
-    text-align: left;
+    text-align: center;
     justify-content: flex-start;
     width: auto;
     margin-bottom: 0;
