--- a/webflow-frontend-style.css
+++ b/webflow-frontend-style.css
@@ -1,6 +1,8 @@
   .main-content-wrapper {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    max-width: 1040px;
   }
   .hks-applied-filter{
     text-transform: capitalize;
@@ -30,11 +32,12 @@
   }
 
   .hks-custom-wrap {
-    max-width: 33%;
+    width: 100%;
+    max-width: 286px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 19px;
+    padding: 12px;
     justify-content: space-between;
   }
   .nav_btns{
