--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -276,6 +276,11 @@ input[type=checkbox], input[type=radio] {
     border-color: #148800;
 }
 
+#email-form-5 input[type="submit"]:disabled {
+  cursor: not-allowed;
+  opacity: 0.7; 
+}
+
 
 /* css for header navigations */
 
